# better-microservices

./: .gitignore  .gitleaks.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: .gitkeep  docs.yml  pages.yml  web.yml
.playwright-mcp/: page-2026-06-03T18-02-49-054Z.yml
apps/web/: .gitkeep  README.md  components.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  (+1 more)
openspec/: README.md  project.md
services/geospatial-core/: .gitignore  LICENSE.md  README.md  package.json  pyproject.toml  ruff.toml
services/geospatial-core/deployment/: README.md
services/geospatial-core/deployment/k8s/: namespace.yaml
services/geospatial-core/examples/: derive_parcel_land_use.py
services/geospatial-core/proto/geospatial/v1/: geospatial.proto
services/geospatial-core/src/geospatial_core/: __init__.py
services/geospatial-core/src/geospatial_core/adapters/: __init__.py
services/geospatial-core/src/geospatial_core/adapters/primary/: __init__.py
services/geospatial-core/src/geospatial_core/adapters/primary/grpc/: __init__.py
services/geospatial-core/src/geospatial_core/adapters/primary/rest/: __init__.py
services/geospatial-core/src/geospatial_core/adapters/secondary/: __init__.py  h3_adapter.py  rasterio_cog_adapter.py
services/geospatial-core/src/geospatial_core/application/: __init__.py
services/geospatial-core/src/geospatial_core/application/commands/: __init__.py
services/geospatial-core/src/geospatial_core/application/ports/: __init__.py  imagery_provider.py  land_use_classifier.py  map_tile_export.py  raster_io.py  segmentation.py  spatial_index.py
services/geospatial-core/src/geospatial_core/application/queries/: __init__.py
services/geospatial-core/src/geospatial_core/application/services/: __init__.py  derive_land_use.py
services/geospatial-core/src/geospatial_core/config/: __init__.py  settings.py
services/geospatial-core/src/geospatial_core/domain/: __init__.py  enums.py
services/geospatial-core/src/geospatial_core/domain/entities/: __init__.py
services/geospatial-core/src/geospatial_core/domain/services/: __init__.py
services/geospatial-core/src/geospatial_core/domain/value_objects/: __init__.py
services/geospatial-core/tests/: conftest.py
services/geospatial-core/tests/unit/: test_provider_selection.py  test_value_objects.py
services/vision-core/: .env.example  .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  SECRETS.md  package.json  pyproject.toml  ruff.toml
services/vision-core/deployment/docker/: Dockerfile
services/vision-core/deployment/jetson/: Dockerfile  README.md
services/vision-core/deployment/k8s/: deployment.yaml  kserve-inferenceservice.yaml  kserve-triton-detection.yaml  kserve-vllm-diagnosis.yaml  namespace.yaml  rbac.yaml
services/vision-core/deployment/kubeflow/: pipeline.py
services/vision-core/deployment/openmv/: README.md
services/vision-core/docs/superpowers/specs/: 2026-06-01-vision-core-design.md
services/vision-core/examples/edge_jetson/: realtime_stream.py
services/vision-core/examples/grpc_client/: segment_image.py
services/vision-core/examples/rest_client/: diagnose.py
services/vision-core/proto/vision/v1/: vision.proto
services/vision-core/src/vision_core/: __init__.py  config.py  runtime.py
services/vision-core/src/vision_core/adapters/: __init__.py
services/vision-core/src/vision_core/adapters/primary/: __init__.py
services/vision-core/src/vision_core/adapters/primary/grpc/: __init__.py  server.py
services/vision-core/src/vision_core/adapters/primary/rest/: __init__.py
services/vision-core/src/vision_core/adapters/secondary/: __init__.py  local_fs_model_registry_adapter.py  minio_active_learning_adapter.py  mqtt_capture_ingest_adapter.py  nim_inference_adapter.py  opencv_video_stream_adapter.py  rfdetr_adapter.py  s3fs_object_storage_adapter.py  triton_detection_adapter.py  ultralytics_yolo_adapter.py  vllm_diagnosis_adapter.py
services/vision-core/src/vision_core/application/: __init__.py
services/vision-core/src/vision_core/application/commands/: __init__.py
services/vision-core/src/vision_core/application/ports/: __init__.py
services/vision-core/src/vision_core/application/queries/: __init__.py
services/vision-core/src/vision_core/domain/: __init__.py
services/vision-core/src/vision_core/domain/entities/: __init__.py
services/vision-core/src/vision_core/domain/events/: __init__.py
services/vision-core/src/vision_core/domain/value_objects/: __init__.py
services/vision-core/tests/: conftest.py
services/vision-core/tests/e2e/: test_smoke.py
services/vision-core/tests/integration/: test_adapters_stub.py  test_nim_inference_live.py
services/vision-core/tests/unit/: test_domain.py  test_mlops_contracts.py  test_model_registry.py  test_nim_inference_adapter.py
(+294 files in other folders)
