[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geospatial-core"
version = "0.1.0"
description = "Satellite & aerial land-use / land-cover AI without cadastral maps — H3 + Sentinel-2 + HLS + rasterio + opengeoai"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.12"
authors = [{ name = "Andrés (lapc506)", email = "andres@dojocoding.io" }]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "structlog>=24.0",
]

[project.optional-dependencies]
# Native geospatial stack — kept out of the base install so the domain/ports import
# without GDAL/H3 wheels. Adapters import these lazily.
geo = [
    "rasterio>=1.3",      # COG windowed I/O, reprojection (GDAL)
    "h3>=4.0",            # Uber H3 hexagonal index (server side; client uses h3_flutter)
    "shapely>=2.0",       # geometry ops
    "pyproj>=3.6",        # CRS transforms (UTM/MGRS <-> EPSG:5367 CRTM05)
    "numpy>=1.26",
]
# Imagery providers / brokers.
imagery = [
    "earthengine-api>=0.1",   # Google Earth Engine broker (S2 + HLS + weak labels)
    "pystac-client>=0.7",     # STAC search (Copernicus / LP DAAC direct COG access)
    "rio-tiler>=6.0",         # tiling / MVT export
]
# Geospatial AI models (opengeoai / GeoAI: SAM, RF-DETR, segmentation).
models = [
    "geoai-py>=0.5",
]
# Everything.
all = [
    "geospatial-core[geo,imagery,models]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geospatial_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["h3.*", "rasterio.*", "shapely.*", "pyproj.*", "ee.*", "geoai.*", "pystac_client.*", "rio_tiler.*", "grpc.*"]
ignore_missing_imports = true
