[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-core"
version = "0.1.0"
description = "Real-time + batch image & video segmentation for AgTech — crop disease, pest, plant-species ID & crop monitoring. Edge (Jetson/cuDNN) + cloud (Kubeflow)."
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "grpcio-health-checking>=1.60",
    "structlog>=24.0",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Ultralytics YOLO segmentation adapter. NOTE: ultralytics is AGPL-3.0 —
# see LICENSE.md / openspec design.md §2 (licensing is an owner decision).
yolo = [
    "ultralytics>=8.3",
    "opencv-python-headless>=4.10",
]
# RF-DETR (Roboflow) segmentation adapter — Apache-2.0 for Nano..Large.
rfdetr = [
    "rfdetr>=1.0",
    "opencv-python-headless>=4.10",
]
# REST / FastAPI primary adapter.
rest = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]
# Cloud serving / Kubeflow pipeline authoring + KServe inference.
cloud = [
    "kfp>=2.7",
    "httpx>=0.27",
]
# Edge / Jetson inference (TensorRT + GStreamer decode). Installed on-device;
# tensorrt/pycuda ship with JetPack, not from PyPI on x86.
edge = [
    "opencv-python-headless>=4.10",
]
all = [
    "ultralytics>=8.3",
    "rfdetr>=1.0",
    "opencv-python-headless>=4.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "kfp>=2.7",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ultralytics.*",
    "rfdetr.*",
    "cv2.*",
    "numpy.*",
    "kfp.*",
    "kfp",
    "grpc.*",
    "tensorrt.*",
    "pycuda.*",
    "fastapi.*",
    "fastapi",
    "uvicorn.*",
    "httpx",
    "httpx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vision_core.adapters.primary.grpc.generated.*"
ignore_errors = true

# REST adapter is optional ('rest' extra); FastAPI's untyped decorators trip
# strict mode when the dep is absent. Type-checked when the extra is installed.
[[tool.mypy.overrides]]
module = "vision_core.adapters.primary.rest.*"
ignore_errors = true
